--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
       <li class="nav-item nav-link active nav-text-color" 
         <%= 'active' if current_page?(users_path) %>"><%= link_to "Our Community", users_path %>
       </li>
+      <li class="nav-item nav-link active nav-text-color" 
+        <%= 'active' if current_page?(my_reviews_path) %>"><%= link_to "My Reviews",  my_reviews_path %>
+      </li>
     </ul>
 
     <%= form_tag(search_page_path, :method => 'get',
