--- a/app/views/shared/_product-card.html.erb
+++ b/app/views/shared/_product-card.html.erb
@@ -1,7 +1,10 @@
 
 <% @products.each do |product| %>
   <div class="card">
-    
+    <% Product.check_product_scopes(product.id) %>
+
+    <%= render partial: "shared/review_stars", locals: { review: product.average_review } %>
+
     <h2><%= link_to product.name, product_path(product) %></h2>
 
     <%= render partial: "shared/review_stars", locals: { review: product.average_review } %>
