Fixes to search page and next previous edits

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -28,7 +28,7 @@
         <% end %>
         <%= will_paginate @results_products %>
 
-      <h2>Product Reviews that Match</h2>
+      <h2>Product Reviewers that Match</h2>
         <% if @results_reviewers.empty?%>
           <div class='search-noresult-card'>
             <p>No reviewers matched the search.</p>
@@ -93,7 +93,5 @@
     </div>
 
   </div>  
-
-  <div>Font made from <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>is licensed by CC BY 3.0</div>
 
 </div>
