--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -107,3 +107,18 @@
 
 
       return ('<div class="arrow-top-reviewed"><span>Top Rated</span></div>').html_safe
+
+
+      <ul>
+        <% @message.files.each do |file| %>
+          <li>
+            <% if file.representable? %>
+              <%= image_tag file.representation(resize_to_limit: [100,100]) %>%>
+              <% else %>
+                <%= link_to rails_blob_path(file, disposition: "attachment") do %>
+                <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Cannot Be Displayed ' %>
+              <% end %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
