--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,26 @@
   }
 }
 
+h1 {
+  font-size: 5.9vh;
+}
+
+h2 {
+  font-size: 3.4vh;
+}
+h3 {
+  font-size: 3.2vh;
+}
+h4 {
+  font-size: 3.0vh;
+}
+h5 {
+  font-size: 2.5vh;
+}
+p {
+  font-size: 1.8vh;
+}
+
 @include headings {
   font-family: 'SnellRoundhand';
   z-index: 100;
@@ -84,6 +104,76 @@ body::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
 }
+
+// // Media Queries
+
+// /* Smartphones (portrait and landscape) ----------- */
+// @media only screen 
+// and (min-device-width : 320px) 
+// and (max-device-width : 480px) {
+// /* Styles */
+// // [class="header-image"] {
+// //   max-width: 480px;
+// //   max-height: 200px;
+// // }
+//   body {
+//     // min-width: 320px;
+//     // max-width: 480px;
+//     // max-height: 260px;
+//     // overflow: hidden;
+//     height: 40vh;
+//   }
+// }
+
+// /* Smartphones (landscape) ----------- */
+// @media only screen 
+// and (min-width : 321px) {
+// /* Styles */
+// body {
+//   // min-width: 320px;
+//   // max-width: 480px;
+//   // max-height: 260px;
+//   // overflow: hidden;
+//   height: 40vh;
+// }
+// }
+
+// /* Smartphones (portrait) ----------- */
+// @media only screen 
+// and (max-width : 320px) {
+// /* Styles */
+// body {
+//   // min-width: 320px;
+//   // max-width: 480px;
+//   // max-height: 260px;
+//   // overflow: hidden;
+//   height: 40vh;
+// }
+// }
+
+// /* iPads (portrait and landscape) ----------- */
+// @media only screen 
+// and (min-device-width : 768px) 
+// and (max-device-width : 1024px) {
+// /* Styles */
+// }
+
+// /* iPads (landscape) ----------- */
+// @media only screen 
+// and (min-device-width : 768px) 
+// and (max-device-width : 1024px) 
+// and (orientation : landscape) {
+// /* Styles */
+// }
+
+// /* iPads (portrait) ----------- */
+// @media only screen 
+// and (min-device-width : 768px) 
+// and (max-device-width : 1024px) 
+// and (orientation : portrait) {
+// /* Styles */
+// }
+
 
 // Header styles
 
@@ -176,12 +266,12 @@ body::-webkit-scrollbar-thumb {
   text-align: center;
 }
 
-.welcome-sub-header > h1 {
-  font-size: 50px;
-}
+// .welcome-sub-header > h1 {
+//   font-size: 50px;
+// }
 
 .welcome-sub-header > h4 {
-  font-size: 30px;
+  // font-size: 30px;
   color: rgba(37, 37, 37, 0.416);
 }
 
@@ -189,27 +279,27 @@ body::-webkit-scrollbar-thumb {
 
 .products {
   display: grid;
-  // grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
-  grid-template-columns: repeat(3, minmax(auto, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  // grid-template-columns: repeat(3, minmax(auto, 1fr));
   grid-gap: 10px;
   align-items: center;
   justify-content: center;
   // min-width: 375px;
   // min-height: 415px;
   
-  & > h2 {
+  & > h3 {
     grid-column: 1 / -1;
   }
   
-  & > ul {
-    list-style-type: none;
-  }
+  // & > ul {
+  //   list-style-type: none;
+  // }
   
-  & > ul > li {
-    font-family: 'SnellRoundhand';
-    border: 1px solid #ccc;
-    border-radius: .3rem;
-  }
+  // & > ul > li {
+  //   font-family: 'SnellRoundhand';
+  //   border: 1px solid #ccc;
+  //   border-radius: .3rem;
+  // }
 
 }
 
@@ -226,6 +316,7 @@ body::-webkit-scrollbar-thumb {
   border-top: 3px solid #419234;
   text-align: center;
   overflow: hidden;
+  justify-self: center;
   // min-width: none;
 }
 
@@ -403,7 +494,7 @@ body::-webkit-scrollbar-thumb {
 .review-card {
   padding: 10px;
   width: 100%;
-  height: 182px;
+  height: 200px;
   border: 1px;
   padding: 5px 5px 0px 5px;
   border-radius: 5px;
@@ -692,7 +783,7 @@ body::-webkit-scrollbar-thumb {
 .arrow-most-reviewed span {
   color: #f5f5f5;
   font-family: sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
   text-align: center;
   left: 33px;
   top: 68px;
@@ -716,7 +807,7 @@ body::-webkit-scrollbar-thumb {
 .arrow-new span {
   color: #f5f5f5;
   font-family: sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
   text-align: center;
   left: 33px;
   top: 80px;
@@ -938,7 +1029,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   // align-items: center;
   // width: auto;
-  max-height: 200vh;
+  max-height: 210vh;
   flex-flow: column wrap;
   // flex-wrap: wrap;
 }
@@ -1032,7 +1123,7 @@ body::-webkit-scrollbar-thumb {
     margin-top: 12px;
     width: 80px;
     height: 30px;
-    margin-right: 30px;
+    margin-right: 110px;
   }
 }
 
