--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render "shared/header" %>
     <%= render "shared/navbar" %>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="content">
         <div class="flash-wrap">
