--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -847,7 +847,7 @@ body::-webkit-scrollbar-thumb {
 
 .admin-card-1btn {
   padding: 10px;
-  width: 100%;
+  width: 70%;
   height: 100px;
   border: 1px;
   padding: 5px 5px 0px 5px;
@@ -856,11 +856,13 @@ body::-webkit-scrollbar-thumb {
   border-top: 3px solid #c3df2a;
   text-align: left;
   margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .admin-card-2btn {
   padding: 10px;
-  width: 100%;
+  width: 70%;
   height: 150px;
   border: 1px;
   padding: 5px 5px 0px 5px;
@@ -869,6 +871,8 @@ body::-webkit-scrollbar-thumb {
   border-top: 3px solid #c3df2a;
   text-align: left;
   margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 // Search Page
