--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 
 //  app/assets/fonts/SnellRoundhandScriptV1.woff
  
-// Custom Boostratp Variables must be imported before bootstrap
+// Custom Boostrap Variables must be imported before bootstrap
 @import "bootstrap";
 
 // custom Stylesheet Import links
@@ -36,26 +36,6 @@
   h4, h5, h6 {
       @content;
   }
-}
-
-h1 {
-  font-size: 4.8vh;
-}
-
-h2 {
-  font-size: 4.0vh;
-}
-h3 {
-  font-size: 3.6vh;
-}
-h4 {
-  font-size: 3.2vh;
-}
-h5 {
-  font-size: 2.5vh;
-}
-p {
-  font-size: 1.8vh;
 }
 
 @include headings {
@@ -79,6 +59,17 @@ a span {
   margin-left: 50px;
 }
 
+@media only screen and (max-width: 460px) {
+  .left-margin {
+    margin-left: 0px;
+    text-align: center;
+    background-color: #f8f9fa;
+    max-width: 100%;
+    width: 100%;
+    min-width: 100%;
+  }
+}
+
 // @media only screen and (max-width: 600px) {
 //   .left-margin {
 //     margin-left: 10px;
@@ -100,21 +91,6 @@ a span {
   min-height: calc(100vh - 570px);
 }
 
-
-// Custom Scrollbar
-
-body::-webkit-scrollbar {
-  width: 1em;
-}
- 
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
- 
-body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-}
 
 // Header styles
 
@@ -140,11 +116,26 @@ body::-webkit-scrollbar-thumb {
   padding-bottom: 100px;
   top: 34px;
   left: 16px;
-  font-size: 6vw;
-  line-height: 65px;
+  font-size: 6.5vh;
+  line-height: 60px;
   min-width: 400px;
   font-family: 'SnellRoundhand', cursive;
 }
+
+@media only screen and (max-width: 460px) {
+  .header-top-left {
+    font-size: 52px;
+    word-wrap: wrap;
+    top: 55px;
+    // width: 200px;
+  }
+  .header-image {
+    max-width: 100%;
+    min-width: 100%;
+    width: 100%;
+  }
+}
+
 .authentication-text {
   display: inline-block;
 }
@@ -180,6 +171,13 @@ body::-webkit-scrollbar-thumb {
   padding: 1px;
   border-radius: 10px;
   object-fit: cover;
+}
+
+@media only screen and (max-width: 460px) {
+  .product-image {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .product-image-tiny {
@@ -257,6 +255,16 @@ body::-webkit-scrollbar-thumb {
   overflow: hidden;
   justify-self: stretch;
   // min-width: none;
+}
+
+@media only screen and (max-width: 460px) {
+  .card {
+    max-width: 340px;
+    // min-width: 100%;
+    // width: 100%;
+    // justify-self:center;
+    justify-self: center;
+  }
 }
 
 .card-image {
@@ -937,8 +945,22 @@ body::-webkit-scrollbar-thumb {
 
   & > p {
     align-self: flex-end;
+    word-wrap: wrap;
+    background-color: #f8f9fa;
+    padding-bottom: 10px;
   }  
 }
+
+@media only screen and (max-width: 460px) {
+  .footer {
+    min-width: 100%;
+    max-width: 100%;
+    width: 100%;
+    word-wrap: wrap;
+    text-align: center;
+  }
+}
+
 
 .footer-flex-end {
   page-break-after: always;
@@ -1097,5 +1119,5 @@ body::-webkit-scrollbar-thumb {
 }
 
 html,body{
-  overflow-x: hidden;
+  overflow-x: visible;
 }
