--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@ a span {
 }
 
 .left-margin {
-  margin-left: 50px;
+  margin-left: 5px;
 }
 
 @media only screen and (max-width: 460px) {
@@ -67,6 +67,13 @@ a span {
     max-width: 100%;
     width: 100%;
     min-width: 100%;
+  }
+}
+
+@media (max-width: 812px) and (orientation: landscape) {
+  .left-margin {
+    margin-left: 10px;
+    background-color: #f8f9fa;
   }
 }
 
@@ -114,9 +121,9 @@ a span {
 .header-top-left {
   position: absolute;
   padding-bottom: 100px;
-  top: 34px;
+  top: 45px;
   left: 16px;
-  font-size: 6.5vh;
+  font-size: 55px;
   line-height: 60px;
   min-width: 400px;
   font-family: 'SnellRoundhand', cursive;
@@ -133,6 +140,21 @@ a span {
     max-width: 100%;
     min-width: 100%;
     width: 100%;
+    height: 250px;
+  }
+}
+
+@media (max-width: 812px) and (orientation: landscape) {
+  .header-top-left {
+    font-size: 50px;
+    top: 60px;
+    // word-wrap: wrap;
+    // top: 55px;
+  }
+  .header-image {
+    height: 200px;
+    // min-width: 100%;
+    // width: 100%;
   }
 }
 
@@ -193,11 +215,11 @@ a span {
 
 // Navbar Styles
 
-@media only screen and (max-width: 480px) {
-  .hidden-xs-hover {
-    visibility: hidden;
-  }
-}
+// @media only screen and (max-width: 480px) {
+//   .hidden-xs-hover {
+//     visibility: hidden;
+//   }
+// }
 
 // Home Page Styles
 
