--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -16,11 +16,17 @@
 
               <%= render partial: "shared/product_image", locals: { product: results_product } %>
 
-              <%= link_to results_product.name, product_path(results_product.id) %>
-              <p>Imported From <%= results_product.country  %></p>
+              <div class="search-product-mobile-flex">
+                <div class="search-product-flex1">
+                  <%= link_to results_product.name, product_path(results_product.id) %>
+                </div>
+                <div class="search-product-flex2">
+                  <p>Imported From <%= results_product.country  %></p>
+                </div>
 
-              <div class="search-adjust-stars">
-                <%= render partial: "shared/review_stars", locals: { review: results_product.average_review } %>
+                <div class="search-adjust-stars">
+                  <%= render partial: "shared/review_stars", locals: { review: results_product.average_review } %>
+                </div>
               </div>
 
             </div>
