Resove product show card responsive issue

--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -122,3 +122,30 @@
           </li>
         <% end %>
       </ul>
+
+
+@media only screen and (max-width: 460px) {
+  .left-margin {
+    margin-left: 0px;
+    text-align: center;
+    background-color: #f8f9fa;
+    max-width: 100%;
+    width: 100%;
+    min-width: 100%;
+  }
+}
+
+@media (max-width: 900px) and (orientation: landscape) {
+  .left-margin {
+    margin-left: 10px;
+    background-color: #f8f9fa;
+  }
+}
+@media only screen and (max-width: 460px)
+
+@media only screen and (max-width: 900px) {
+  .card-show {
+    width: 70%;
+    height: 500px;
+  }
+}
