--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -335,7 +335,7 @@ a span {
 .card-show {
   // position: relative;
   padding: 10px;
-  width: 800px;
+  max-width: 800px;
   height: 600px;
   background-color: white;
   padding: 0% 0% 0% 0%;
@@ -347,6 +347,21 @@ a span {
   overflow: hidden;
   // min-width: none;
 }
+
+.card-image-show {
+  padding: 1px;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+// @media only screen and (max-width: 900px) {
+//   .card-show {
+//     width: 70%;
+//     height: 500px;
+//   }
+// }
 
 .card-show-up {
   position: relative;
@@ -372,13 +387,6 @@ a span {
   margin-bottom: -15px;
 }
 
-.card-image-show {
-  padding: 1px;
-  border-radius: 5px;
-  width: 800px;
-  height: 100%;
-  object-fit: cover;
-}
 
 // User Forms
 
@@ -612,21 +620,31 @@ a span {
 
   & > .product-box1 { // avatar
     order: 1;
+    // flex-basis: content;
     // align-content: center;
     
   }
 
   & > .product-box2 { // product info
     order: 2;
-    // width: 100%;
+    flex-basis: content;
+    justify-self: center;
   }
 
   & > .product-box3 { //date
     order: 3;
+    // flex-basis: content;
     // align-content: center;
   }
   
 }
+
+// @media only screen and (max-width: 900px) {
+//   .product-show-flex {
+//     justify-content: space-between;
+//     align-items: center;
+//   }
+// }
 
 // Product Show
 
@@ -879,9 +897,6 @@ a span {
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 @media only screen and (max-width: 460px) {
@@ -921,7 +936,7 @@ a span {
 
 .search-product-card {
   padding: 10px;
-  width: 60%;
+  width: 70%;
   height: 125px;
   border: 1px;
   border-radius: 5px;
@@ -938,7 +953,7 @@ a span {
 
 .search-review-card {
   padding: 10px;
-  width: 60%;
+  width: 70%;
   height: 140px;
   border: 1px;
   border-radius: 5px;
@@ -951,7 +966,7 @@ a span {
 }
 
 .search-noresult-card {
-  width: 60%;
+  width: 70%;
   height: 40px;
   border: 1px;
   padding: 5px 5px 0px 5px;
@@ -1248,7 +1263,7 @@ a span {
     margin-top: 5px;
     width: 80px;
     height: 30px;
-    margin-right: 110px;
+    margin-right: 30%;
   }
 }
 
