--- a/app/views/shared/_review_cards.html.erb
+++ b/app/views/shared/_review_cards.html.erb
@@ -21,9 +21,9 @@
     </div>
   <div class="review-index-text">
     <p><%= review.content_body  %></P>
-    <div></div>
+  </div>
 
+  <div class="review-pic">
       <%= render partial: "shared/product_image", locals: { product: product } %>
-
   </div>
 </div> 
