Update footer pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,6 +3,6 @@
     <h2>About</h2>
   </div>
   <div class="static-flex2">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa corrupti voluptates et nisi? Tenetur eum assumenda explicabo expedita cupiditate, architecto reiciendis maxime illum facere necessitatibus iusto dolores, quos deserunt quibusdam, animi nam! Nulla voluptas dolores in deserunt quidem cum, ipsa exercitationem. Tempora ducimus, officiis ullam beatae sapiente neque reprehenderit.  The story of Mario's Specialty Foods is a long one...  and here it is:  It is the story of two brothers...  and 7 other men.  It began when they filed form 192.410-192D for starting a small business, food cart or non-dairy farming concern... </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa corrupti voluptates et nisi? Tenetur eum assumenda explicabo expedita cupiditate, architecto reiciendis maxime illum facere necessitatibus iusto dolores, quos deserunt quibusdam, animi nam! Nulla voluptas dolores in deserunt quidem cum, ipsa exercitationem. Tempora ducimus, officiis ullam beatae sapiente neque reprehenderit.  The story of Mario's Specialty Foods is a long one...  and here it is:  It is the story of two brothers...  and 7 other men.  It began when they filed form 192.410-192D for starting a small business, food cart or non-dairy farming concern. Perferendis perspiciatis voluptatem dicta quaerat sunt deleniti tempora temporibus.. </p>
   </div>
 </div>
