Found the artifacts on android that was widening the viewport

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,7 @@ a span {
 
 .left-margin {
   margin-left: 5px;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 460px) {
@@ -64,9 +65,9 @@ a span {
     margin-left: 0px;
     text-align: center;
     background-color: #f8f9fa;
-    max-width: 100%;
-    width: 100%;
-    min-width: 100%;
+    // max-width: 100%;
+    // width: 100%;
+    // min-width: 100%;
   }
 }
 
@@ -111,8 +112,8 @@ a span {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  min-width: 400px;
-  width: 100%;
+  min-width: 90%px;
+  max-width: 95%;
   height: 400px;
   object-fit: cover;
   opacity: 0.35;
@@ -125,7 +126,7 @@ a span {
   left: 16px;
   font-size: 55px;
   line-height: 60px;
-  min-width: 400px;
+  min-width: 100%;
   font-family: 'SnellRoundhand', cursive;
 }
 
@@ -301,7 +302,7 @@ a span {
 
 .card-image-not-found {
   padding: 1px;
-  // min-width: 200px;
+  max-width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -603,7 +604,7 @@ a span {
 
 .review-card-show {
   padding: 10px;
-  width: 800px;
+  max-width: 800px;
   height: 400px;
   background-color: white;
   padding: 0% 0% 0% 0%;
@@ -611,9 +612,15 @@ a span {
   border-radius: 5px;
   border: 1.5px solid #CBCBCB;
   border-top: 3px solid #65e252;
-  overflow: hidden;
+  overflow: scroll;
 }
 
+@media only screen and (max-width: 460px) {
+  .review-card-show {
+    // width: 70%;
+    height: 500px;
+  }
+}
 
 .review-card-flexbox {
   display: flex;
