--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,13 +56,15 @@ a span {
 }
 
 .left-margin {
-  margin-left: 5px;
-  max-width: 100%;
+  overflow: hidden;
+  // margin-left: 5px;
+//   max-width: 100%;
+  width: 100%;
+//   min-width: 100%;
 }
 
 @media only screen and (max-width: 460px) {
   .left-margin {
-    margin-left: 0px;
     text-align: center;
     background-color: #f8f9fa;
     // max-width: 100%;
@@ -112,8 +114,7 @@ a span {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  min-width: 90%px;
-  max-width: 95%;
+  min-width: 100%;
   height: 400px;
   object-fit: cover;
   opacity: 0.35;
@@ -126,7 +127,7 @@ a span {
   left: 16px;
   font-size: 55px;
   line-height: 60px;
-  min-width: 100%;
+  max-width: 95%;
   font-family: 'SnellRoundhand', cursive;
 }
 
@@ -334,9 +335,10 @@ a span {
 // Product Card Show
 
 .card-show {
-  // position: relative;
-  padding: 10px;
+  // padding: 10px;
   max-width: 800px;
+  // max-width: 100%;
+  // max-width: max-content;
   height: 600px;
   background-color: white;
   padding: 0% 0% 0% 0%;
@@ -346,13 +348,12 @@ a span {
   border-top: 3px solid #419234;
   text-align: center;
   overflow: hidden;
-  // min-width: none;
 }
 
 .card-image-show {
   padding: 1px;
   border-radius: 5px;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   object-fit: cover;
 }
@@ -361,6 +362,9 @@ a span {
   .card-show {
     // width: 70%;
     height: 500px;
+  }
+  .card-image-show {
+    overflow: hidden;
   }
 }
 
@@ -495,6 +499,12 @@ a span {
   order: 1;
   border: 1px;
   // flex-basis: fit-content;
+}
+
+@media only screen and (max-width: 460px) {
+  .product-col-1 {
+    overflow: hidden;
+  }
 }
 
 .product-col-2 {
