--- a/app/views/shared/_product_form.html.erb
+++ b/app/views/shared/_product_form.html.erb
@@ -17,7 +17,9 @@
       <div class="mobile-signin">
         <br>
       </div>
-      <%= f.submit class: "login-wide"  %>
+      <div class="center-button">
+        <%= f.submit class: "btn btn-success login-wide"  %>
+      </div>
   </div>
     <div class="product-col-1">
 
