--- a/app/views/shared/_review_form.html.erb
+++ b/app/views/shared/_review_form.html.erb
@@ -24,12 +24,12 @@
 
   <div class="review-form-center">
       <div class="center">
-        <%= f.text_area :content_body, :cols =>80, :rows => 5 %><br>
+        <%= f.text_area :content_body, :cols =>30, :rows => 5 %><br>
       </div>
   </div>
 
   <div class="center">
-      <%= f.submit 'Submit', :class => 'btn btn-success' %>
+      <%= f.submit 'Submit', :class => 'btn btn-success login-wide' %>
   </div>
     <% end %>
 </div>
