--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
 </div>
 
 <div class="center margin-spacer">
-  <%= link_to "Add Your Review", new_product_review_path(@product), class: "btn btn-success" %>
+  <%= link_to "Add Your Review", new_product_review_path(@product), class: "btn btn-success login-wide" %>
 
 </div>
   <% if current_user && current_user.admin %>
@@ -24,8 +24,8 @@
       <div class="center">
         <h3>Admin Only</h3>
       </div>
-      <p><%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %></p>
-      <p><%= link_to "Delete product", product_path(@product), class: "btn btn-success", 
+      <p><%= link_to "Edit", edit_product_path(@product), class: "btn btn-success admin-button" %></p>
+      <p><%= link_to "Delete product", product_path(@product), class: "btn btn-success admin-button", 
                               :data => {:confirm => "Are you sure?",
                                             :method => "delete"} %></p>
     </div>
