--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 
 <% if current_user %>
   <div class="margin-spacer center">
-    <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-success" %> 
+    <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-success login-wide" %> 
   </div>
 <% end %>
 
