--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -122,27 +122,42 @@ a span {
 
 .header-top-left {
   position: absolute;
-  padding-bottom: 100px;
-  top: 45px;
-  left: 16px;
-  font-size: 55px;
-  line-height: 60px;
-  max-width: 95%;
+  // padding-bottom: 100px;
+  padding-bottom: 5%;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 65px;
+  line-height: 65px;
+  width: 95%;
   font-family: 'SnellRoundhand', cursive;
+}
+
+@media only screen and (max-width: 990px) {
+  .header-top-left {
+    top: 30%;
+    line-height: 70px;
+  }
+  .header-image {
+    height: 375px;
+  }
 }
 
 @media only screen and (max-width: 460px) {
   .header-top-left {
-    font-size: 52px;
-    word-wrap: wrap;
-    top: 55px;
+    // font-size: 50px;
+    // word-wrap: wrap;
+    // padding-bottom: 0px;
+    top: 40%;
+    // top: 55px;
     // width: 200px;
   }
   .header-image {
     max-width: 100%;
     min-width: 100%;
     width: 100%;
-    height: 250px;
+    height: 350px;
   }
 }
 
@@ -168,6 +183,12 @@ a span {
   position: absolute;
   top: 15px;
   right: 10px;
+}
+
+@media only screen and (max-width: 990px) {
+  .authentication-position {
+    top: -40px;
+  }
 }
 
 // Avatars
