Touch up title in smaller mobile views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,10 +146,11 @@ a span {
 
 @media only screen and (max-width: 460px) {
   .header-top-left {
-    // font-size: 50px;
+    font-size: 60px;
+    width: 90%;
     // word-wrap: wrap;
     // padding-bottom: 0px;
-    top: 40%;
+    top: 45%;
     // top: 55px;
     // width: 200px;
   }
