Shrink authorization log out text slightly for mobile under 374vh

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,6 +192,12 @@ a span {
   }
 }
 
+@media only screen and (max-width: 374px) {
+  .authentication-text {
+    font-size: smaller ;
+  }
+}
+
 // Avatars
 
 .avatar-tiny {
