--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,19 +57,13 @@ a span {
 
 .left-margin {
   overflow: hidden;
-  // margin-left: 5px;
-//   max-width: 100%;
   width: 100%;
-//   min-width: 100%;
 }
 
 @media only screen and (max-width: 460px) {
   .left-margin {
     text-align: center;
     background-color: #f8f9fa;
-    // max-width: 100%;
-    // width: 100%;
-    // min-width: 100%;
   }
 }
 
@@ -79,12 +73,6 @@ a span {
     background-color: #f8f9fa;
   }
 }
-
-// @media only screen and (max-width: 600px) {
-//   .left-margin {
-//     margin-left: 10px;
-//   }
-// }
 
 .flash {
   display: inline-block;
@@ -123,7 +111,6 @@ a span {
 
 .header-top-left {
   position: absolute;
-  // padding-bottom: 100px;
   padding-bottom: 5%;
   top: 35%;
   left: 50%;
@@ -149,16 +136,9 @@ a span {
   .header-top-left {
     font-size: 60px;
     width: 90%;
-    // word-wrap: wrap;
-    // padding-bottom: 0px;
     top: 45%;
-    // top: 55px;
-    // width: 200px;
   }
   .header-image {
-    // max-width: 100%;
-    // min-width: 100%;
-    // width: 100%;
     height: 350px;
   }
 }
@@ -167,13 +147,9 @@ a span {
   .header-top-left {
     font-size: 50px;
     top: 60px;
-    // word-wrap: wrap;
-    // top: 55px;
   }
   .header-image {
     height: 200px;
-    // min-width: 100%;
-    // width: 100%;
   }
 }
 
@@ -242,15 +218,6 @@ a span {
   margin-top: 10px;
 }
 
-// Footer Styles
-
-// Navbar Styles
-
-// @media only screen and (max-width: 480px) {
-//   .hidden-xs-hover {
-//     visibility: hidden;
-//   }
-// }
 
 // Home Page Styles
 
@@ -260,7 +227,6 @@ a span {
 
 
 .welcome-sub-header > h4 {
-  // font-size: 30px;
   color: rgba(37, 37, 37, 0.416);
 }
 
@@ -269,32 +235,17 @@ a span {
 .products {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  // grid-template-columns: repeat(3, minmax(auto, 1fr));
   grid-gap: 10px;
   align-items: center;
   justify-content: center;
   justify-items: stretch;
-  // min-width: 375px;
-  // min-height: 415px;
   
   & > h3 {
     grid-column: 1 / -1;
   }
-  
-  // & > ul {
-  //   list-style-type: none;
-  // }
-  
-  // & > ul > li {
-  //   font-family: 'SnellRoundhand';
-  //   border: 1px solid #ccc;
-  //   border-radius: .3rem;
-  // }
-
 }
 
 .card {
-  // position: relative;
   padding: 10px;
   min-width: 375px;
   height: 415px;
@@ -307,15 +258,11 @@ a span {
   text-align: center;
   overflow: hidden;
   justify-self: stretch;
-  // min-width: none;
 }
 
 @media only screen and (max-width: 460px) {
   .card {
     max-width: 340px;
-    // min-width: 100%;
-    // width: 100%;
-    // justify-self:center;
     justify-self: center;
   }
 }
@@ -364,10 +311,7 @@ a span {
 // Product Card Show
 
 .card-show {
-  // padding: 10px;
   max-width: 800px;
-  // max-width: 100%;
-  // max-width: max-content;
   height: 600px;
   background-color: white;
   padding: 0% 0% 0% 0%;
@@ -389,7 +333,6 @@ a span {
 
 @media only screen and (max-width: 460px) {
   .card-show {
-    // width: 70%;
     height: 500px;
   }
   .card-image-show {
@@ -405,7 +348,6 @@ a span {
 .card-show-up {
   position: relative;
   margin-top: -12px;
-  // margin-bottom: -15px;
 }
 
 .card-show-flex {
@@ -457,7 +399,6 @@ a span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // justify-content: space-between;
   }
   .form-col-1 {
     order: 2;
@@ -487,7 +428,6 @@ a span {
   .mobile-login {
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
   }
   .mobile-signin {
     display: show;
@@ -520,7 +460,6 @@ a span {
 // Product Forms
 
 .product-form-flex {
-  // padding: 2rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap; 
@@ -529,7 +468,6 @@ a span {
 .product-col-1 {
   order: 1;
   border: 1px;
-  // flex-basis: fit-content;
 }
 
 
@@ -538,7 +476,6 @@ a span {
   text-align: left;
   order: 2;
   border: 1px;
-  //   flex-basis: fit-content;
 }
 
 @media only screen and (max-width: 460px) {
@@ -546,8 +483,6 @@ a span {
     overflow: hidden;
   }
   .center-button {
-    // align-self: center;
-    // text-align: center;
     margin-left: -20px;
 
   }
@@ -577,7 +512,6 @@ a span {
   margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
-  // overflow-wrap: normal;
 }
 
 
@@ -664,7 +598,6 @@ a span {
 
 @media only screen and (max-width: 460px) {
   .review-card-show {
-    // width: 70%;
     height: 500px;
   }
 }
@@ -700,7 +633,6 @@ a span {
 .review-form-center {
   display: block;
   margin: 0 auto;
-  // max-width: 100%;
 }
 
 @media only screen and (max-width: 460px) {
@@ -748,12 +680,7 @@ a span {
     & > .product-box3 {
       order: 3;
     }
-    
-    // & > .product-box2 {
-    //   order: 3;
-    // }
   }
-
 }
 
 // Product Show
@@ -878,7 +805,7 @@ a span {
   
   display: inline-block;
   font-size: var(--star-size);
-  font-family: Times; // make sure ★ appears correctly
+  font-family: Times;
   line-height: 1;
   margin-top: -12px;
   
@@ -895,7 +822,6 @@ a span {
 
 .arrow-top-reviewed {
   background-color: #d4af37;
-  // box-shadow: 0 0 3px 2px rgba(0,0,0,0.8);
   height: 120px;
   left: -70px;
   position: absolute;
@@ -918,7 +844,6 @@ a span {
 
 .arrow-most-reviewed {
   background-color: #4d8647;
-  // box-shadow: 0 0 3px 2px rgba(0,0,0,0.8);
   height: 120px;
   left: -70px;
   position: absolute;
@@ -942,7 +867,6 @@ a span {
 
 .arrow-new {
   background-color: #62da4f;
-  // box-shadow: 0 0 3px 2px rgba(0,0,0,0.8);
   height: 120px;
   left: -70px;
   position: absolute;
@@ -1059,7 +983,6 @@ a span {
   align-self: center;
   display: flex;
   justify-content: space-between;
-  // align-items: center;
 }
 
 .search-review-card {
@@ -1130,7 +1053,6 @@ a span {
   flex: 0 0 50%;
   order: 5;
   margin-top: -10px;
-  // margin-left: 0 auto;
   align-self: flex-end;
 }
 
@@ -1183,8 +1105,6 @@ a span {
   }
   .search-review-box5 {
     margin-top: -80px;
-    // align-self: normal;
-    // align-self: center;
   }
 
 }
@@ -1246,12 +1166,10 @@ a span {
   display: flex;
   flex-direction: column;
   align-items: center;
-  // align-items: baseline;
 
   & > .static-flex1 {
     order: 1;
     margin-top: 10px;
-    // justify-content: center;
 
   }
 
@@ -1288,7 +1206,6 @@ a span {
 
 @media (max-width: 960px) {
   .community-profile-card {
-    // flex: 100%;
     width: 70%;
   }
   .community-flex-container {
@@ -1298,7 +1215,6 @@ a span {
 
 @media (max-width: 600px) {
   .community-profile-card {
-    // flex: 100%;
     width: 90%;
   }
 }
@@ -1306,11 +1222,9 @@ a span {
 .community-profile-flex {
   display: flex;
   align-items: center;
-  // justify-content: space-between;
 }
 
 .community-profile-box1 {
-  // flex: 0 0 50%;
   margin-right: 0 auto;
   order: 1;
   page-break-after: always;
@@ -1323,8 +1237,6 @@ a span {
   justify-content: space-between;
   flex-direction: column;
   width: auto;
-  // flex-flow: column wrap;
-  // flex-wrap: wrap;
 }
 
 @media (max-width: 520px) {
@@ -1339,12 +1251,10 @@ a span {
 
 .community-column-box1 {
   order: 1;
-  // margin-top: -50px;
 }
 
 .community-column-box2 {
   order: 2;
-  // margin-top: 10px;
   & > .community-align-stars {
     display: inline-block;
   }
@@ -1352,12 +1262,10 @@ a span {
 
 .community-column-box3 {
   order: 3;
-  // margin-top: 10px;
 }
 
 .community-column-box4 {
   order: 4;
-  // margin-top: 10px;
 }
 
 .star-align {
@@ -1395,7 +1303,6 @@ a span {
       grid-column: 1;
       grid-row: 1;
       justify-self: center;
-      // width: 200px;
     }
 
     & > .sort-button {
@@ -1409,6 +1316,24 @@ a span {
 
 .sort-our-community-spacer {
   margin-top: -17px;
+}
+
+// Error Handling - uses class flash-wrap
+
+.error-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 570px);
+
+  & > h3, ul {
+    padding: 5px;
+    font: bold;
+    background-color: #f9f8ea;
+    display: inline-block;
+    list-style-type: none;
+  }
 }
 
 html,body{
