--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -55,8 +55,8 @@
   <% if current_user.id == @review.user_id %>
     <div class="center">
     <h3>Edit My Post</h3>
-      <p><%= link_to "Edit review", edit_product_review_path(@product, @review), class: "btn btn-success admin-button" %></p>
-      <p><%= link_to "Delete review", product_review_path(@product, @review), class: "btn btn-success admin-button",
+      <p><%= link_to "Edit review", edit_product_review_path(@product, @review), class: "btn btn-success" %></p>
+      <p><%= link_to "Delete review", product_review_path(@product, @review), class: "btn btn-success",
                               :data => {:confirm => "Are you sure?",
                               :method => "delete"} %></p>
     </div>                          
@@ -67,8 +67,8 @@
       <div class="center">
         <h3>Admin Only</h3>
       </div>
-      <p><%= link_to "Edit review", edit_product_review_path(@product, @review), class: "btn btn-success admin-button" %></p>
-      <p><%= link_to "Delete review", product_review_path(@product, @review), class: "btn btn-success admin-button",
+      <p><%= link_to "Edit review", edit_product_review_path(@product, @review), class: "btn btn-success" %></p>
+      <p><%= link_to "Delete review", product_review_path(@product, @review), class: "btn btn-success",
                               :data => {:confirm => "Are you sure?",
                               :method => "delete"} %></p>
     </div>                     
