--- a/app/views/shared/_form_new_user.html.erb
+++ b/app/views/shared/_form_new_user.html.erb
@@ -24,7 +24,7 @@
           <br>
           <br>
         </div>
-        <%= f.submit "Submit", class: 'btn btn-success login-wide' %><br>
+        <%= f.submit "Submit", class: 'btn btn-success' %><br>
       </div>
     </div>
   <% end %>
