--- a/app/views/shared/_product_form.html.erb
+++ b/app/views/shared/_product_form.html.erb
@@ -18,7 +18,7 @@
         <br>
       </div>
       <div class="center-button">
-        <%= f.submit class: "btn btn-success login-wide"  %>
+        <%= f.submit class: "btn btn-success"  %>
       </div>
   </div>
     <div class="product-col-1">
