--- a/app/views/shared/_review_form.html.erb
+++ b/app/views/shared/_review_form.html.erb
@@ -29,7 +29,7 @@
   </div>
 
   <div class="center">
-      <%= f.submit 'Submit', :class => 'btn btn-success login-wide' %>
+      <%= f.submit 'Submit', :class => 'btn btn-success' %>
   </div>
     <% end %>
 </div>
