--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,7 +24,7 @@
       <div class="center">
         <h3>Admin Only</h3>
       </div>
-      <p><%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %></p>
+      <p><%= link_to "Edit Product", edit_product_path(@product), class: "btn btn-success" %></p>
       <p><%= link_to "Delete product", product_path(@product), class: "btn btn-success", 
                               :data => {:confirm => "Are you sure?",
                                             :method => "delete"} %></p>
