--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
 
           <%= render partial: "shared/avatar", locals: { user: current_user } %>
 
-          <%= link_to current_user.email, user_path(current_user)%>
+          <%= link_to current_user.email, user_path(current_user), class: "auth-email"%>
           <p class="authentication-text"> | </p>
           <a class="authentication-text" href="/signout">Sign Out</a>
         <% else %>
